@@ -1,3 +1,14 @@
+2010-08-14  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [CMake] Set target properties only if available
+        https://bugs.webkit.org/show_bug.cgi?id=43978
+
+        * CMakeLists.txt:
+        * jsc/CMakeLists.txt:
+        * wtf/CMakeLists.txt:
+
 2010-08-13  Kevin Ollivier  <kevino@theolliviers.com>
 
         [wx] Build fix, add CString to the list of forwards.
